<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNoteFragment">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_display"
        android:text="@string/title_add_note"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTitleNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/adlam_display"
        android:hint="@string/hint_title_add_note"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#78888A"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <EditText
        android:id="@+id/editDescriptionNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/hint_description_add_note"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#78888A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitleNote"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/splash_bg"
        android:importantForAccessibility="no"
        android:src="@drawable/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>