<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.NoteDetailFragment">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/deleteBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/recycle_bin"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/shareBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="35dp"
        android:src="@drawable/group_1"
        app:layout_constraintBottom_toBottomOf="@+id/deleteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/deleteBtn"
        app:layout_constraintTop_toTopOf="@+id/deleteBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/title_note_detail"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <TextView
        android:id="@+id/addTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/timeAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNote" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTime"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/descriptionNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/note_description_detail"
            android:textSize="16sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/splash_bg"
        android:importantForAccessibility="no"
        android:src="@drawable/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>